Require PHP 7.3 at least

--- a/composer.json
+++ b/composer.json
@@ -1,65 +1,91 @@
 {
-    "name": "netgen/remote-media-bundle",
-    "description": "Remote media field type implementation",
-    "type": "ezplatform-bundle",
-    "keywords": [
-        "ezpublish",
-        "ezplatform",
-        "remote media",
-        "netgen",
-        "remote-media-bundle"
-    ],
-    "homepage": "https://github.com/netgen/NetgenRemoteMediaBundle",
-    "license": "GPL-2.0-only",
-    "authors": [
-        {
-            "name": "Netgen",
-            "homepage": "http://netgen.io",
-            "email": "info@netgen.io"
-        },
-        {
-            "name": "Ivan Herak",
-            "email": "ivan@netgen.io"
-        },
-        {
-            "name": "Jurica Hladek",
-            "email": "jurica@netgen.io"
-        }
-    ],
+    "name":        "ezsystems/ezpublish-legacy",
+    "description": "eZ Publish Legacy (aka LegacyStack in 5.x. Is an updated version of eZ Publish 4.x cable of being combined with eZ Platform)",
+    "homepage":    "http://share.ez.no",
+    "license":     "GPL-2.0-only",
+    "type":        "ezpublish-legacy",
+    "suggest": {
+        "php-64bit": "For support of more than 30 languages, a 64bit php installation on all involved prod/dev machines is required",
+        "ext-curl": "Curl provides better support for interacting with other servers, like downloading packages over SSL",
+        "ext-gd": "Unless you have ImageMagic installed GD is required for eZ Publish to be able to manipulate images",
+        "ext-mysqli": "Mysqli is the default database handler used by eZ Publish",
+        "ext-openssl": "OpenSSL provides cryptographically secure random bytes, which is used in certain parts of the product to greatly improve security",
+        "ext-pcntl": "If you plan to take advantage of eZ Publish Async publishing feature, then pcntl extension is required",
+        "ezsystems/ezsi-ls": "ezsi would allow you to use Edge/Server Side Includes of blocks in templates",
+        "ezsystems/ezscriptmonitor-ls": "ezscriptmonitor makes it possible to better deal with long running bulk operations within eZ Publish",
+        "ezsystems/ezfind-ls": "ezfind is a Solr based advance search engine for eZ Publish with a lot more features then the built in search",
+        "ezsystems/eztags-ls": "eztags is a full tagging/taxonomy solution for eZ Publish replacing the simpler builtin ezkeywords datatype"
+    },
     "require": {
-        "php": "^7.2",
-        "ezsystems/ezpublish-kernel": "^7.4",
-        "doctrine/orm": "^2.4",
-        "cloudinary/cloudinary_php": "^1.0"
+        "php": "^7.3",
+        "ext-dom": "*",
+        "ext-libxml": "*",
+        "ext-mbstring": "*",
+        "ext-pcre": "*",
+        "ext-json": "*",
+        "ext-iconv": "*",
+        "ext-reflection": "*",
+        "ext-session": "*",
+        "ext-spl": "*",
+        "ext-simplexml": "*",
+        "ezsystems/ezpublish-legacy-installer": "*",
+        "ezsystems/ezautosave-ls": "~5.3",
+        "ezsystems/ezdemo-ls-extension": "~5.4",
+        "ezsystems/ezflow-ls-extension": "~5.3",
+        "ezsystems/ezgmaplocation-ls-extension": "~5.3",
+        "ezsystems/ezie-ls": "~5.3",
+        "ezsystems/ezmbpaex-ls": "~5.3",
+        "ezsystems/ezmultiupload-ls": "~5.3",
+        "ezsystems/ezodf-ls": "~5.3",
+        "ezsystems/ezprestapiprovider-ls": "~5.3",
+        "ezsystems/ezstarrating-ls-extension": "~5.3",
+        "ezsystems/ezwt-ls-extension": "~5.3",
+        "symfony/polyfill-php73":  "^1.9",
+        "zetacomponents/archive": "~1.5",
+        "zetacomponents/authentication": "~1.4",
+        "zetacomponents/authentication-database-tiein": "~1.2",
+        "zetacomponents/cache": "~1.6",
+        "zetacomponents/configuration": "~1.4",
+        "zetacomponents/console-tools": "~1.7",
+        "zetacomponents/database": "~1.5",
+        "zetacomponents/debug": "~1.3",
+        "zetacomponents/event-log": "~1.5",
+        "zetacomponents/feed": "~1.4",
+        "zetacomponents/image-conversion": "~1.4",
+        "zetacomponents/mail": "~1.8",
+        "zetacomponents/mvc-tools": "~1.2",
+        "zetacomponents/mvc-authentication-tiein": "~1.1",
+        "zetacomponents/persistent-object": "~1.8",
+        "zetacomponents/signal-slot": "~1.2",
+        "zetacomponents/system-information": "~1.1",
+        "zetacomponents/webdav": "~1.1"
     },
     "require-dev": {
-        "ezsystems/legacy-bridge": "^2.0",
-        "netgen/open-graph-bundle": "^1.0",
-        "netgen/admin-ui-bundle": "^2.0",
-        "matthiasnoback/symfony-dependency-injection-test": "^3.0",
-        "mikey179/vfsstream": "^1.0",
-        "phpunit/phpunit": "^7.0",
-        "friendsofphp/php-cs-fixer": "^2.0",
-        "rector/rector": "^0.5.22"
+        "phpunit/phpunit": "4.8.36",
+        "zetacomponents/php-generator": "~1.1"
     },
     "autoload": {
-        "psr-4": {
-            "Netgen\\Bundle\\RemoteMediaBundle\\": "bundle"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Netgen\\Bundle\\Tests\\": "tests",
-            "Netgen\\Bundle\\OpenGraphBundle\\Tests\\": "vendor/netgen/open-graph-bundle/tests"
-        }
+      "files": ["autoload.php"]
     },
     "scripts": {
-        "test": "@php vendor/bin/phpunit --colors=always",
-        "fix": "@php vendor/bin/php-cs-fixer fix"
+      "legacy-scripts": [
+          "@php bin/php/ezpgenerateautoloads.php"
+      ],
+      "post-install-cmd": [
+          "@legacy-scripts"
+      ],
+      "post-update-cmd": [
+          "@legacy-scripts"
+      ]
+    },
+    "conflict": {
+        "ezsystems/ezpublish-kernel": "<7.3 || >=2013.4"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.0.x-dev"
+            "dev-2017.12": "2017.12.x-dev",
+            "dev-2019.03": "2019.03.x-dev",
+            "dev-master": "2020.99.x-dev"
         }
     }
 }
