Use config resolver to get siteaccess aware parameters

--- a/bundle/Resources/config/services.yml
+++ b/bundle/Resources/config/services.yml
@@ -14,8 +14,8 @@ services:
     netgen_remote_media.variation.resolver:
         class: Netgen\Bundle\RemoteMediaBundle\RemoteMedia\VariationResolver
         lazy: true
-        calls:
-            - [setVariations, ["$image_variations;netgen_remote_media$"]]
+        arguments:
+            - "@ezpublish.config.resolver"
 
     netgen_remote_media.provider.cloudinary.gateway:
         class: Netgen\Bundle\RemoteMediaBundle\RemoteMedia\Provider\Cloudinary\Gateway\CloudinaryApiGateway
